--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,16 @@
 title: The 500 Hats of LambdaCalculus
 email: viewtiful.icchan@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Hacking the Planet!
+  Hacking the Planet through computers, art, cats, and more!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: LambdaCalculus7
 github_username:  LambdaCalculus37
+social:
+  name: Robert Menes
+  links:
+    - https://twitter.com/LambdaCalculus7
+    - https://github.com/LambdaCalculus37
 
 # Build settings
 markdown: kramdown
